--- a/data/config.json
+++ b/data/config.json
@@ -1,10 +1,12 @@
 {
 	"Lorems": {
+		"Thai" : "ทดสอบนะจ๊ะ",
 		"Latin": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
 		"Cyrillic": "Римский император Константин I Великий по достоинству оценил выгодное местоположение приморского Византия, расположенного на стыке Европы и Азии. Кроме того, на решение Константина повлияла неспокойная обстановка в самом Риме: недовольство знати и постоянные распри в борьбе за трон. Император хотел увенчать свою реформаторскую деятельность созданием нового административного центра огромной державы. Закладка города состоялась осенью 324 года, и Константин лично решил обозначить его границы.",
 		"Arabic (RTL)": "وضع ابن الهيثم تصور واضح للعلاقة بين النموذج الرياضي المثالي ومنظومة الظواهر الملحوظة.",
 		"Chinese": "北京位於華北平原的西北边缘，背靠燕山，有永定河流经老城西南，毗邻天津市、河北省，是一座有三千余年建城历史、八百六十余年建都史的历史文化名城，历史上有金、元、明、清、中华民国（北洋政府时期）等五个朝代在此定都，以及数个政权建政于此，荟萃了自元明清以来的中华文化，拥有众多历史名胜古迹和人文景观。《不列颠百科全书》将北京形容为全球最伟大的城市之一，而且断言，“这座城市是中国历史上最重要的组成部分。在中国过去的八个世纪里，不论历史是否悠久，几乎北京所有主要建筑都拥有着不可磨灭的民族和历史意义”。北京古迹众多，著名的有故宫、天坛、颐和园、圆明园、北海公园等。",
-		"Mixed charsets": "Lorem ipsum dolor sit amet, Римский император Константин I Великий, 北京位於華北平原的西北边缘"
+		"Mixed charsets": "Lorem ipsum dolor sit amet, Римский император Константин I Великий, 北京位於華北平原的西北边缘",
+		"Czech": "Příliš žluťoučký kůň úpěl ďábelské ódy"
 	},
 	"Text size": {
 		"With spaces": {
@@ -12,8 +14,10 @@
 			"129b": { "_type": "size", "size": "129", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"256b": { "_type": "size", "size": "256", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"257b": { "_type": "size", "size": "257", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
+			"32K - 1": { "_type": "size", "size": "32767", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"32K": { "_type": "size", "size": "32768", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"32K + 1": { "_type": "size", "size": "32769", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
+			"64K - 1": { "_type": "size", "size": "65535", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"64K": { "_type": "size", "size": "65536", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." },
 			"64K + 1": { "_type": "size", "size": "65537", "template": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." }
 		},
@@ -22,13 +26,15 @@
 			"129b": { "_type": "size", "size": "129", "template": "0123456789" },
 			"256b": { "_type": "size", "size": "256", "template": "0123456789" },
 			"257b": { "_type": "size", "size": "257", "template": "0123456789" },
+			"32K - 1": { "_type": "size", "size": "32767", "template": "0123456789" },
 			"32K": { "_type": "size", "size": "32768", "template": "0123456789" },
 			"32K + 1": { "_type": "size", "size": "32769", "template": "0123456789" },
+			"64K - 1": { "_type": "size", "size": "65535", "template": "0123456789" },
 			"64K": { "_type": "size", "size": "65536", "template": "0123456789" },
 			"64K + 1": { "_type": "size", "size": "65537", "template": "0123456789" }
 		}
 	},
-	"Names": [ 
+	"Names": [
 		"John O'Grady",
 		"John James O'Grady",
 		"John James \"Jimmy\" O'Grady",
@@ -36,19 +42,24 @@
 		"Peter de Montfort",
 		"Chloë Rømer",
 		"NULL",
+        "nil",
+        "False",
 		"GoVeg.com",
 		"田中太郎",
-		"Leone Sextus Denys Oswolf Fraudatifilius Tollemache-Tollemache de Orellana Plantagenet Tollemache-Tollemache"
+		"Leone Sextus Denys Oswolf Fraudatifilius Tollemache-Tollemache de Orellana Plantagenet Tollemache-Tollemache",
+		"ᴮᴵᴳᴮᴵᴿᴰ",
+		"Milan Vojnovič"
 	],
 	"E-mail addresses": {
-		"Valid" :{ 
+		"Valid" :{
 			"Simple": "email@domain.com",
 			"Dot in the address": "firstname.lastname@domain.com",
 			"Subdomain": "email@subdomain.domain.com",
 			"Plus in address": "firstname+lastname@domain.com",
 			"Numeric domain": "email@123.123.123.123",
 			"Square bracket around IP address": "email@[123.123.123.123]",
-			"Quotes around address": "\"email\"@domain.com",
+			"Unnecessary quotes around address": "\"email\"@domain.com",
+			"Necessary quotes around address": "\"email..email\"@domain.com",
 			"Numeric address": "1234567890@domain.com",
 			"Dash in domain": "email@domain-one.com",
 			"Underscore": "_______@domain.com",
@@ -75,8 +86,63 @@
 			"Multiple dots in the domain": "email@domain..com"
 		}
 	},
+    "Website Addresses": {
+        "Valid": [
+            "www.mysite.com",
+            "http://www.mysite.com",
+            "https://www.mysite.com",
+            "mysite.com",
+            "my.site.com",
+            "http://www.mysite.com:80",
+            "http://www.mysite.org",
+            "http://www.mysite.net",
+            "http://www.mysite.us"
+        ],
+        "Invalid": [
+            "http//www.mysite.com",
+            "http:/www.mysite.com",
+            "://www.mysite.com",
+            "foo://www.mysite.com",
+            "mysite"
+        ]
+    },
+	"Credit Cards": {
+		"Visa": [
+			"4242424242424242",
+			"4111111111111111"
+		],
+		"MasterCard": [
+			"5555555555554444",
+			"5200828282828210"
+		],
+		"American Express": [
+			"378282246310005",
+			"371449635398431"
+		],
+		"Others": {
+			"Discover": "6011111111111117",
+			"Diners Club": "38520000023237",
+			"JCB": "3530111333300000"
+		}
+	},
+	"Addresses": {
+		"US Address": "1978 Lindale Avenue, San Francisco, CA 94108, US",
+		"UK Address": "61 Church Road, Liverpool, Merseyside L25 6DA, UK",
+		"CZ Address": "Bramboříková 1/2996, 106 00, Praha 10"
+	},
+	"Phones": {
+		"US number": "+1-202-555-0100",
+		"UK number": "+44 1632 960132",
+		"AU number": "+61 1900 654 321",
+		"CZ number": "+420777555666"
+	},
 	"Numbers": [
-		"0", "32768", "32769", "65536", "65537", "2147483648", "2147483649", "4294967296", "4294967297", "1E-16", "-1", "0.0001", 
+		"0",
+		"32767", "32768", "32769",
+		"65535", "65536", "65537",
+		"2147483647", "2147483648", "2147483649",
+		"4294967295", "4294967296", "4294967297",
+		"1E-16", "-1", "0.0001",
 		"1,234,567", "1.234.567,89"
 	],
 	"Whitespace": {
@@ -84,7 +150,7 @@
 		"Leading spaces": "  leading spaces",
 		"Mixing tabs and spaces": "\t leading tabs and spaces",
 		"spaces on both sides":" Space on both sides ",
-		"Just whitespace": "\t \t\n \n " 
+		"Just whitespace": "\t \t\n \n "
 	},
 	"Format exploits": {
 		"SQL Injection": "Robert'); DROP TABLE Students;--",
